brat/test/golden/error/empty_into.brat.golden
Error in test/golden/error/empty_into.brat@5:11
intoErr = |> makeInt
          ^^^^^^^^^^

  Type mismatch when checking makeInt()(())
Expected: (a1 :: Bool)
But got:  (a1 :: Int)


